--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,5 +1,5 @@
 # Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Deploy Jekyll with GitHub Pages dependencies preinstalled
+name: Deploy Jekyll with DeepLearning_updated
 
 on:
   # Runs on pushes targeting the default branch
@@ -32,8 +32,8 @@ jobs:
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
-          source: ./PLUS_DeepLearning/
-          destination: ./_site/PLUS_DeepLearning
+          source: ./DeepLearning_updated/
+          destination: ./_site/DeepLearning_updated
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
 
