--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -41,7 +41,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: ${{https://code-de-eo-lab.github.io/E-Learning/DeepLearning_updated/# }}
     runs-on: ubuntu-latest
     needs: build
     steps:
