--- a/.github/workflows/Deploy_Page_DeepLearning.yml
+++ b/.github/workflows/Deploy_Page_DeepLearning.yml
@@ -1,5 +1,5 @@
 # Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Deploy Jekyll with DeepLearning_updated
+name: Deploy Jekyll with DeepLearning
 
 on:
   # Runs on pushes targeting the default branch
